--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
    		<li>
    			<a href="http://www.pachimaga.com/database/machine/slot_index.php?id=5182">ピンクパンサー</a>
    		</li>
-   		<li><a href="https://www.p-world.co.jp/machine/database/3494">
-   		キングオブキングパルサー</a>
+   		<li><a href="https://www.pachinkovillage.com/slot/s.php?M=3129">
+   		マジシャン</a>
    		</li>
    	</ul>
    <a href="https://www.youtube.com/watch?v=q3ZY_Wv0BHc">おすすめの曲です</a>
